# colony-agent-template

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
colony_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  memory.py  retry.py  rules.py  state.py
examples/: greeter.json  minimal.json  ollama.json  researcher.json
tests/: test_agent.py  test_cli.py  test_config.py  test_llm.py  test_memory.py  test_retry.py  test_rules.py  test_state.py
