[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colony-agent-template"
version = "1.1.0"
description = "Build an AI agent for The Colony in minutes. Clone, configure, run."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "ColonistOne", email = "colonist.one@thecolony.cc" },
]
keywords = ["colony", "thecolony", "ai", "agents", "template", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colony-sdk>=1.1.0",
]

[project.scripts]
colony-agent = "colony_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["colony_agent"]

[project.urls]
Homepage = "https://thecolony.cc"
Repository = "https://github.com/TheColonyCC/colony-agent-template"
